# obzenflow-topology

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TRADEMARKS.md  deny.toml
.github/workflows/: ci.yml
docs/: flowip-top-001-validation-enforcement.md
src/: lib.rs  test_ids.rs  ulid.rs
src/builder/: builder.rs  mod.rs
src/stages/: mod.rs  stage_info.rs
src/topology/: edge.rs  mod.rs  shape.rs  topology.rs
src/types/: contract.rs  join.rs  middleware.rs  mod.rs  scc_id.rs  stage_id.rs  stage_type.rs  status.rs  subgraphs.rs  typing.rs
src/validation/: mod.rs  validation.rs
tests/: topology_canonical_serde.rs  topology_edge_cases.rs  topology_semantic_validation.rs  topology_validation_tests.rs
tests/common/: mod.rs
