[package]
name = "obzenflow-topology"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Flow topology graph structures for ObzenFlow"
repository = "https://github.com/obzenflow/obzenflow-topology"
keywords = ["graph", "topology", "flow", "dag", "pipeline"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
idkit = { path = "../obzenflow-idkit", features = ["serde"] }  # NO gen - type only!
once_cell = "1"

[dev-dependencies]
serde_json = "1.0"
insta = "1.34"

[features]
default = []
# Optional: Integration test helpers
test-utils = []
# Serde support is always enabled through idkit
serde = []