[package]
name = "obzenflow-topology"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Flow topology graph structures for ObzenFlow"
repository = "https://github.com/obzenflow/obzenflow-topology"
keywords = ["graph", "topology", "flow", "dag", "pipeline"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# IMPORTANT: obzenflow-topology uses idkit for type-safety only, NOT for ID generation
# - Backend (flowstate_rs) generates real ULIDs using the standard ulid crate
# - Frontend (obzen-flow-ui) generates sequential IDs using idkit's gen feature
# - This crate acts as a type-safe bridge between both worlds
# - That's why we explicitly exclude the "gen" feature here
obzenflow-idkit = { path = "../obzenflow-idkit", features = ["serde"] }  # NO gen - type only!
once_cell = "1"

[dev-dependencies]
serde_json = "1.0"
insta = "1.34"

[features]
default = []
# Optional: Integration test helpers
test-utils = []
# Serde support is always enabled through idkit
serde = []
