[package]
name = "obzenflow-topology"
version = "0.3.1"
edition = "2021"
authors = ["ObzenFlow Contributors"]
license = "MIT OR Apache-2.0"
description = "Flow topology graph structures for ObzenFlow"
documentation = "https://docs.rs/obzenflow-topology"
homepage = "https://github.com/ObzenFlow/obzenflow-topology"
repository = "https://github.com/ObzenFlow/obzenflow-topology"
readme = "README.md"
keywords = ["graph", "topology", "flow", "dag", "pipeline"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# IMPORTANT: obzenflow-topology uses idkit for type-safety only, NOT for ID generation.
# This crate intentionally does not enable `obzenflow-idkit`'s `gen` feature, so it does not
# require an RNG. ID generation should happen in the application layer (native or WASM) and
# IDs are passed into Topology.
obzenflow-idkit = { version = "0.2.0", features = ["serde"] }
once_cell = "1"
serde_json = "1.0"

[dev-dependencies]
insta = "1.34"

[features]
default = []
